refactor: create a LED pattern component

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,7 @@
-idf_component_register(SRCS "main.c" "misc.c" "button.c" "identify.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS
+    "main.c"
+    "button.c"
+    INCLUDE_DIRS
+     "."
+)
